Correct spacing at mobile and small screen widths

--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,78 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  background-color: #e2e2e2;
+  font: normal 100%/1.3 sans-serif;
+
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+}
+
+.img-flex {
+  display: block;
+  width: 100%;
+}
+
+.text-container {
+  padding: 1rem;
+}
+
+h1 {
+  margin: 0 0 1.3rem;
+
+}
+
+.sub-text {
+  font-weight: bold;
+  margin: 0;
+}
+
+p {
+  margin: 0 0 2rem;
+}
+
+a {
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  background-color: #555;
+  border-radius: 4px;
+  padding: 0.5em 0.75em;
+}
+
+.button {
+    margin-bottom: 0.5em;
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 110%;
+    line-height: 1.4;
+  }
+
+  .content {
+    display: flex;
+
+  }
+
+  .text-container {
+    width: 50%;
+  }
+
+  h1 {
+    margin: 0 0 1.4rem;
+  }
+
+  .img-container {
+    width: 50%;
+    justify-content: center;
+  }
+
 }
